# hoogle

./: .ghci  .gitignore  .hlint.yaml  .stylish-haskell.yaml  .travis.yml  .weeder.yaml  CHANGES.txt  Deploy.hs  Hoogle.cabal  Hoogle.cabal.4  LICENSE  Main.hs  Makefile  Paths_hoogle.hs  README.md  README.txt  Readme.md  Setup.hs  appveyor.yml  deploy.bat  deploy.sh  deploy.txt  ghci.bat  hogle.cabal  hoogle.cabal  hoogle.txt  install.md  notes.txt  push.bat  stack.yaml  todo.txt  todo2.txt  todo3.txt  travis.hs  travis.sh  typesearch.txt
.github/workflows/: ci.yaml  ci.yml
cbits/: Test.hs  include.h  text_search.bat  text_search.c  text_search.hs
data/fromdarcs/: Config.h  Main.hs
data/generate/: Base.hs  Check.hs  Config.h  Default.hs  Download.hs  Hackage.hs  Haddock.hs  Hoogle.hs  Keyword.hs  Keywords.hs  Legacy.hs  Link.hs  Main.hs  Mirror.hs  Packages.hs  Platform.hs  Process.hs  Util.hs  run.bat
data/hackage/: Main.hs
data/hadhoo/: Main.hs
data/hadhtml/: Main.hs  TextUtil.hs  exclude.txt  haskell98.txt  prefix.txt
data/hihoo/: hihoo.pl
data/hooscrape/: Main.hs  ScrapeModule.hs  XMonad-Core.html  haddock.css
data/old/fromdarcs/: Main.hs
data/old/hadhoo/: Main.hs
data/old/hadhtml/: Lexer.hs  Main.hs  exclude.txt  haskell98.txt
datadir/: examples.txt  rank.txt  testdata.txt  tests.txt
datadir/resources/: embed-demo.htm  hoogle.css  hoogle.js  hoogle.src  hoogle_iphone.css  search.xml  template.html  template_example.html
docs/: API.md  Database.md  Developers.md  Haskell.org.md  HaskellServer.md  Install.md  LICENSE  Local-Install.md  TypeSearch.md  builddocs.bat  file-format.txt  haddock.txt  hoo-file-format.txt  notes.txt  parser.txt  todo.txt
docs/tmr/: hoogle.bib  hoogle.tex
html/: embed-demo.htm  hoogle.css  hoogle.js  index.css  index.html  index.js  log.html  log.js  search.xml  welcome.html
html/plugin/: chosen.jquery.js
misc/: Keywords.hs  Upgrade.hs  boring  build-compile.sh  build-haskell.sh  build-unpack.sh  build-york.sh  embed-demo.htm  hoogle.1  plasma-talk-hoogle.ppt  settings.txt  tag-rename.txt
misc/haddock/: Haddock.hs  main.txt
misc/icons/: icons.vsd
misc/logo/: hoogle.ppt  hoogle.xar  logo3.pptx
misc/sample-data/: emily.txt  henry.txt
misc/sample-data/emily-1.11/: emily.txt
misc/sample-data/emily-1.2/: emily.txt
misc/sample-data/emily-1.3/: emily.txt
misc/scripts/: hoogle.el.txt
misc/xul/hoogle/: application.ini  hoogle.bat
script/: CabalUntar.hs  Keyword.hs  Package.hs  Upgrade.hs  main.cpp
src/: DataDocs.hs  DataItems.hs  DataNames.hs  DataTags.hs  DataTypes.hs  Doc.hs  Document.hs  Dump.hs  EvalItem.hs  Hoogle.hs  Input.hs  InputHoogle.hs  Main.hs  ParseCabal.hs  ParseHoogle.hs  ParseQuery.hs  Paths.hs  Paths_hoogle.hs  Query.hs  Score.hs  Server.hs  Test.hs  Type.hs  Util.hs  Web.hs  hoogle.txt  make.bat  rank.txt  score.txt  test.txt
src/Action/: CmdLine.hs  Generate.hs  Search.hs  Server.hs  Test.hs
src/CmdLine/: Action.hs  Actions.hs  All.hs  Files.hs  Find.hs  Flag.hs  GetOpt.hs  Load.hs  Main.hs  Main4.hs  Query.hs  Search.hs  Test.hs  Type.hs
src/Console/: Action.hs  All.hs  Files.hs  Log.hs  Rank.hs  Search.hs  Test.hs
src/Corpus/: Document.hs  Prepare.ipynb
src/Data/: BinaryRaw.hs  Heap.hs  IntHeap.hs  Key.hs  Range.hs  TagStr.hs  Threshold.hs  TypeMap.hs
src/Data/Binary/: Defer.hs  Example.hs  Raw.hs
src/DataFile/: DataFile.hs
src/Dead/: BinaryDefer.hs  CmdLine.hs  Main4.hs
src/Dead/DataBase_dead/: Alias.hs
src/Dead/Hoogle/: Hoogle.hs  MatchClass.hs  MatchType.hs  Result.hs  TypeSig.hs
src/Dead/Result/: All.hs  TextMatch.hs
src/Dead/Score/: Main.hs
src/Doc/: Main.hs
src/Doc/res/: documentation.txt
src/General/: All.hs  Base.hs  Binary.hs  BurrowsWheeler.hs  CGI.hs  Code.hs  Conduit.hs  FMIndex.hs  Glob.hs  Heap.hs  HtmlTags.hs  IString.hs  Index.hs  Log.hs  Parallel.hs  Prelude.hs  Store.hs  Str.hs  System.hs  Template.hs  TextUtil.hs  Timing.hs  Type.hs  TypeMap.hs  UTF8.hs  Util.hs  Web.hs
src/General/Defer/: Index.hs
src/Hoogle/: All.hs  Database.hs  General.hs  Hoogle.hs  Lexer.hs  Match.hs  MatchClass.hs  MatchName.hs  MatchType.hs  Parser.hs  Result.hs  Search.hs  TextUtil.hs  TypeAlias.hs  TypeSig.hs  Util.hs
src/Hoogle/Common/: All.hs  Item.hs  Result.hs
src/Hoogle/DataBase/: Alias.hs  Aliases.hs  All.hs  BinaryDefer.hs  Docs.hs  Haddock.hs  Instances.hs  Item.hs  Items.hs  Kinds.hs  Modules.hs  NameIndex.hs  NameSearch.hs  Reduce.hs  Serialise.hs  SubstrSearch.hs  Suggest.hs  Test.hs  TextSearch.hs  Texts.hs  Type.hs  TypeSearch.hs  Types.hs
src/Hoogle/DataBase2/: Str.hs  Type.hs
src/Hoogle/DataBase_dead/: Docs.hs  Types.hs
src/Hoogle/DataStore/: Alias.hs  All.hs  Instances.hs  Items.hs  Texts.hs  Type.hs  Types.hs
src/Input/: Cabal.hs  Download.hs  Haddock.hs  Hoogle.hs  Item.hs  ParseDecl.hs  Reorder.hs  Set.hs  Settings.hs  Type.hs
src/Output/: Colors.hs  Items.hs  Names.hs  Tags.hs  Types.hs  Types2.hs
src/Plugin/: HolePlugin.hs  PluginDemo.hs
src/Rank/: .gitignore  setup.py
src/Recipe/: All.hs  Base.hs  Cabal.hs  Command.hs  Download.hs  General.hs  Hackage.hs  Haddock.hs  Keyword.hs  Keywords.hs  Type.hs  Warning.hs
src/Score/: Main.hs  examples.txt
src/Search/: All.hs  Index.hs  Signature.hs  Substring.hs  Suggest.hs  Type.hs  Value.hs  Word.hs
src/Test/: All.hs  BWT_FM.hs  Defer.hs  Docs.hs  General.hs  Parse_Query.hs  Parse_TextBase.hs  Parse_TypeSig.hs  Parsing.hs  Test.hs
src/Web/: Action.hs  All.hs  CGI.hs  HTML.hs  HTML.hsx  HTML.ths  Lambdabot.hs  Main.hs  Page.hs  Query.hs  Response.hs  Server.hs  Template.hs  Text.hs  XML.hs
src/Web/res/: error.inc  (+7 more)
src/res/: hoogle.css  hoogle.js  search.xml
test/: HoogleSpec.hs
test/data/: build-hadhtml.bat  gen-hadhtml.bat  gen-hihoo.bat  gen-hihoo.sh  runtests.hs
web/: about.htm  academics.htm  developers.htm  download.htm  help.htm  nodocs.htm
web/res/: hoogle.css  quicksearch.js
wiki/: Hoogle.html  Keywords.html  LibraryDocumentation.html  LibraryDocumentation_2fCPUTime.html  LibraryDocumentation_2fIx.html  LibraryDocumentation_2fPrelude.html  backup.bat
(+141 files in other folders)
