Name:            Hoogle
Version:         3.0
License:         GPL
Author:          Neil Mitchell
Synopsis:        Haskell API Search
Homepage:        http://www.haskell.org/hoogle/
Stability:       Beta
Build-Depends:
                 base

Executable:      hoogle
Main-Is:         CmdLine.hs
Hs-Source-Dirs:  src

Executable:      index.cgi
Main-Is:         Web.hs
Other-Modules:   HTML
Hs-Source-Dirs:  src, src/Web

Executable:      hoodoc.cgi
Main-Is:         Doc.hs
Hs-Source-Dirs:  src

