cabal-version:      >= 1.18
build-type:         Simple
name:               hoogle
version:            5.0.17.12
license:            BSD3
license-file:       LICENSE
category:           Development
author:             Neil Mitchell <ndmitchell@gmail.com>
maintainer:         Neil Mitchell <ndmitchell@gmail.com>
copyright:          Neil Mitchell 2004-2019
synopsis:           Haskell API Search
description:
    Hoogle is a Haskell API search engine, which allows you to
    search many standard Haskell libraries by either function name,
    or by approximate type signature.
homepage:           https://hoogle.haskell.org/
bug-reports:        https://github.com/ndmitchell/hoogle/issues
tested-with:        GHC==8.8.1, GHC==8.6.5, GHC==8.4.4, GHC==8.2.2, GHC==8.0.2
extra-doc-files:
    README.md
    CHANGES.txt
extra-source-files:
    cbits/*.h
    cbits/*.c
data-files:
    misc/settings.txt
    html/*.js
    html/*.png
    html/*.css
    html/*.xml
    html/*.html
    html/plugin/*.css
    html/plugin/*.js
    html/plugin/*.png

source-repository head
    type:     git
    location: https://github.com/ndmitchell/hoogle.git

library
    hs-source-dirs:     src
    default-language:   Haskell2010

    build-depends:
        QuickCheck,
        aeson,
        base > 4 && < 5,
        blaze-html,
        blaze-markup,
        binary,
        bytestring >= 0.10.2.0,
        cmdargs,
        conduit >= 1.3.0,
        conduit-extra >= 1.2.3.2,
        connection,
        containers >= 0.5,
        deepseq,
        directory,
        extra >= 1.6.6,
        filepath,
        foundation >= 0.0.13,
        old-locale,
        hashable,
        haskell-src-exts >= 1.22 && < 1.23,
        http-conduit >= 2.3,
        http-types,
        js-flot,
        js-jquery,
        mmap,
        process-extras,
        resourcet,
        storable-tuple,
        tar,
        template-haskell,
        text,
        time >= 1.5,
        transformers,
        uniplate,
        utf8-string,
        vector,
        wai,
        wai-logger,
        warp,
        warp-tls,
        zlib

    c-sources:        cbits/text_search.c
    include-dirs:     cbits
    includes:         include.h
    install-includes: include.h
    cc-options:       -std=c99

    ghc-options:      -fno-state-hack
    if impl(ghc < 8.0)
        build-depends: semigroups >= 0.18

    exposed-modules:
        Hoogle

    other-modules:
        Paths_hoogle
        Action.CmdLine
        Action.Generate
        Action.Search
        Action.Server
        Action.Test
        Input.Cabal
        Input.Download
        Input.Haddock
        Input.Item
        Input.Reorder
        Input.Set
        Input.Settings
        Output.Items
        Output.Names
        Output.Tags
        Output.Types
        Query
        General.Conduit
        General.IString
        General.Log
        General.Store
        General.Str
        General.Template
        General.Timing
        General.Util
        General.Web


executable hoogle
    main-is:            src/Main.hs
    default-language:   Haskell2010
    ghc-options:        -threaded

    build-depends:
        base > 4 && < 5,
        hoogle
